--- a/ProjetDrive/pom.xml
+++ b/ProjetDrive/pom.xml
@@ -14,6 +14,18 @@
         <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+
+        <repository>
+
+            <id>com.e-iceblue</id>
+
+            <url>http://repo.e-iceblue.cn/repository/maven-public/</url>
+
+        </repository>
+
+    </repositories>
+
     <dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -30,6 +42,21 @@
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+
+            <groupId>e-iceblue</groupId>
+
+            <artifactId>spire.office.free</artifactId>
+
+            <version>3.1.1</version>
+
+          </dependency>
+        
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.5</version>
         </dependency>
     </dependencies>
 
